name:                   euler
version:                0.1.0.0
synopsis:               Haskell solutions to Project Euler problems.
-- description:
homepage:               http://github.com/whittle/euler
license:                MIT
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2014 Jason A. Whittle
category:               Development
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

executable euler
  main-is:              Main.hs
  build-depends:        base >=4.6 && <4.7
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010

library
  exposed-modules:      Euler.Primes
                        , Euler.Problem001
                        , Euler.Problem002
                        , Euler.Problem003
                        , Euler.Problem004
                        , Euler.Problem005
                        , Euler.Problem006
                        , Euler.Problem007
                        , Euler.Problem008
                        , Euler.Problem009
                        , Euler.Problem010
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.6 && <4.7
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010

executable test-euler
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  default-language:     Haskell2010
  build-depends:        base ==4.6.*, Cabal >= 1.16.0
                        , euler
                        , HUnit
                        , QuickCheck
                        , smallcheck
                        , tasty
                        , tasty-hunit
                        , tasty-quickcheck
                        , tasty-smallcheck
test-suite Tests
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  Type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base ==4.6.*, Cabal >= 1.16.0
                        , euler
                        , HUnit
                        , QuickCheck
                        , smallcheck
                        , tasty
                        , tasty-hunit
                        , tasty-quickcheck
                        , tasty-smallcheck
