name:                   euler
version:                0.1.0.0
synopsis:               Haskell solutions to Project Euler problems.
description:            Haskell solutions to Project Euler problems.
homepage:               http://github.com/whittle/euler
license:                MIT
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2014 Jason A. Whittle
category:               Development
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

executable euler
  main-is:              src/Main.hs
  build-depends:        base >= 4.8.0
                      , euler == 0.1.0.0
  ghc-options:          -Wall
  default-language:     Haskell2010

library
  exposed-modules:      Euler.Factorial
                      , Math.Primes
                      , Euler.Problem001
                      , Euler.Problem002
                      , Euler.Problem003
                      , Euler.Problem004
                      , Euler.Problem005
                      , Euler.Problem006
                      , Euler.Problem007
                      , Euler.Problem008
                      , Euler.Problem009
                      , Euler.Problem010
                      , Euler.Problem011
                      , Euler.Problem012
                      , Euler.Problem013
                      , Euler.Problem014
                      , Euler.Problem015
                      , Euler.Problem016
                      , Euler.Problem017
                      , Euler.Problem018
                      , Euler.Problem019
                      , Euler.Problem020
                      , Euler.Problem021
                      , Euler.Problem022
                      , Euler.Problem023
                      , Euler.Problem024
                      , Euler.Problem025
                      , Euler.Problem026
                      , Euler.Problem027
                      , Euler.Problem028
                      , Euler.Problem029
                      , Euler.Problem030
  build-depends:        base >= 4.8.0 && < 5
                      , containers >= 0.5.0
                      , hmatrix >= 0.16.0
                      , memoize >= 0.6.0
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010

executable test-euler
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.8.0
                      , Cabal >= 1.16.0
                      , hmatrix >= 0.16.0
                      , time >= 1.4.0
                      , euler
                      , HUnit
                      , QuickCheck
                      , smallcheck
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , tasty-smallcheck
                      , tasty-th

test-suite Tests
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Test.hs
  Type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base >= 4.8.0
                      , Cabal >= 1.16.0
                      , hmatrix >= 0.16.0
                      , time >= 1.4.0
                      , euler
                      , HUnit
                      , QuickCheck
                      , smallcheck
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , tasty-smallcheck
                      , tasty-th

source-repository head
  type: git
  location: http://github.com/whittle/euler.git
